syntax = "proto3";

package schedule;

// ScheduleIndexer service for storing and retrieving user schedules
service ScheduleIndexer {
  // Store a user's schedule (will be encrypted)
  rpc StoreSchedule(StoreScheduleRequest) returns (StoreScheduleResponse);

  // Retrieve a user's schedule (will be decrypted)
  rpc GetSchedule(GetScheduleRequest) returns (GetScheduleResponse);
}

message StoreScheduleRequest {
  string username = 1;
  string schedule_json = 2;  // The schedule data as JSON string
}

message StoreScheduleResponse {
  bool success = 1;
  string message = 2;
}

message GetScheduleRequest {
  string username = 1;
}

message GetScheduleResponse {
  bool success = 1;
  string schedule_json = 2;  // The decrypted schedule data
  string message = 3;
}
